# ABM

./: .gitignore  ABM.sln  ABM.vcxproj  ABM.vcxproj.filters  README.md  RESTORATION_SUCCESS.md  meson.build  settings.ini
Debug/: ABM.ilk  ABM.lastbuildstate  ABM_manifest.rc  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
Release/: ABM.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
source/: main.cpp  main.cpp_SIMPLE.txt  projectloop.h  projectsetup.h  settings.h
source/generic/: 3DMath.h  3dfunctions.h  bresenham.h  dirlist.h  generic.h  genericmath.h  genericsettings.h  initvideo.h  input.h  music.h  readinifiles.h  refreshscreen.h  spherebumpmesh.h
source/generic/dashboard/: dashbars.h  dashbutton.h  dashcursor.h  dashloop.h  dashmenu.h  dashonoff.h  dashsetup.h  dashtext.h  dashtime.h
source/generic/opengl/: loadtexture.h
source/generic/sdldraw/: loadanddrawsurfaces.h
source/projectspecific/: bumpintoworld.h  drawworld.h  genworldgrid.h  menuandhud.h  menuandhud.h_DEBUG_MENU.txt  play.h  saveandload.h  startnewgame.h  text.h  textures.h
source/projectspecific/entities/: decal.h  person.h
subprojects/: ogg.wrap  sdl2.wrap  sdl2_image.wrap  sdl2_mixer.wrap  vorbis.wrap
subprojects/packagefiles/SDL2-2.32.8/: fix-windows-build.patch
